@@ -1,96 +1,130 @@
 package ru.yandex.practicum.filmorate.service;
 
-import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
+import lombok.RequiredArgsConstructor;
+import ru.yandex.practicum.filmorate.dto.request.CreateUserRequest;
+import ru.yandex.practicum.filmorate.dto.request.UpdateUserRequest;
+import ru.yandex.practicum.filmorate.dto.response.UserResponse;
+import ru.yandex.practicum.filmorate.exception.ConditionsNotMetException;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
 import ru.yandex.practicum.filmorate.exception.ValidationException;
+import ru.yandex.practicum.filmorate.mapper.UserMapper;
 import ru.yandex.practicum.filmorate.model.User;
-import ru.yandex.practicum.filmorate.storage.user.UserStorage;
+import ru.yandex.practicum.filmorate.storage.UserStorage;
 
 import java.time.LocalDate;
 import java.util.Collection;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class UserService {
+
     private final UserStorage userStorage;
+    private final UserMapper userMapper;
 
-    public User create(User user) {
+    public UserResponse create(CreateUserRequest request) {
+        User user = userMapper.toModel(request);
         validateUser(user);
-        applyBusinessRules(user);
-        return userStorage.create(user);
+        applyBusinessRulesOnCreate(user);
+        User saved = userStorage.create(user);
+        return userMapper.toResponse(saved);
     }
 
-    public User update(User user) {
+    public UserResponse update(UpdateUserRequest request) {
+        User user = userMapper.toModel(request);
         validateUser(user);
-        applyBusinessRules(user);
-        return userStorage.update(user);
+        applyBusinessRulesOnUpdate(user);
+        User saved = userStorage.update(user);
+        return userMapper.toResponse(saved);
     }
 
-    public Collection<User> findAll() {
-        return userStorage.findAll();
+    public Collection<UserResponse> findAll() {
+        return userStorage.findAll().stream()
+                .map(userMapper::toResponse)
+                .collect(Collectors.toList());
     }
 
-    public User findById(Integer id) {
-        return userStorage.findById(id)
+    public UserResponse findById(Integer id) {
+        User user = userStorage.findById(id)
                 .orElseThrow(() -> new NotFoundException("Пользователь с id=" + id + " не найден"));
+        return userMapper.toResponse(user);
     }
 
     public void addFriend(Integer userId, Integer friendId) {
         if (!userStorage.existsById(userId) || !userStorage.existsById(friendId)) {
             throw new NotFoundException("Один из пользователей не найден");
         }
-        User user = userStorage.findById(userId).get();
-        User friend = userStorage.findById(friendId).get();
-
-        user.getFriends().add(friendId);
-        friend.getFriends().add(userId);
+        if (userId.equals(friendId)) {
+            throw new ConditionsNotMetException("Нельзя добавить себя в друзья");
+        }
+        userStorage.addFriend(userId, friendId);
     }
 
     public void removeFriend(Integer userId, Integer friendId) {
         if (!userStorage.existsById(userId) || !userStorage.existsById(friendId)) {
             throw new NotFoundException("Один из пользователей не найден");
         }
-        User user = userStorage.findById(userId).get();
-        User friend = userStorage.findById(friendId).get();
-
-        user.getFriends().remove(friendId);
-        friend.getFriends().remove(userId);
+        userStorage.removeFriend(userId, friendId);
     }
 
-    public Collection<User> getFriends(Integer userId) {
-        User user = findById(userId);
-        return user.getFriends().stream()
-                .map(this::findById)
-                .toList();
+    public Collection<UserResponse> getFriends(Integer userId) {
+        if (!userStorage.existsById(userId)) {
+            throw new NotFoundException("Пользователь с id=" + userId + " не найден");
+        }
+        return userStorage.getFriends(userId).stream()
+                .map(userMapper::toResponse)
+                .collect(Collectors.toList());
     }
 
-    public Collection<User> getCommonFriends(Integer userId, Integer otherId) {
+    public Collection<UserResponse> getCommonFriends(Integer userId, Integer otherId) {
         if (!userStorage.existsById(userId) || !userStorage.existsById(otherId)) {
             throw new NotFoundException("Один из пользователей не найден");
         }
-        return userStorage.findCommonFriends(userId, otherId);
+        return userStorage.getCommonFriends(userId, otherId).stream()
+                .map(userMapper::toResponse)
+                .collect(Collectors.toList());
     }
 
     private void validateUser(User user) {
         if (user.getId() != null && user.getId() <= 0) {
             throw new ValidationException("Id должен быть положительным числом");
         }
-        if (!StringUtils.hasText(user.getEmail()) || !user.getEmail().contains("@")) {
+
+        String email = user.getEmail() != null ? user.getEmail().trim() : "";
+        if (!StringUtils.hasText(email) || !email.contains("@")) {
             throw new ValidationException("Электронная почта не может быть пустой и должна содержать символ @");
         }
-        if (!StringUtils.hasText(user.getLogin()) || user.getLogin().contains(" ")) {
+        user.setEmail(email);
+
+        String login = user.getLogin() != null ? user.getLogin() : "";
+        if (!StringUtils.hasText(login) || login.contains(" ")) {
             throw new ValidationException("Логин не может быть пустым и содержать пробелы");
         }
+        user.setLogin(login.trim());
+
         if (user.getBirthday() != null && user.getBirthday().isAfter(LocalDate.now())) {
             throw new ValidationException("Дата рождения не может быть в будущем");
         }
     }
 
-    private void applyBusinessRules(User user) {
+    private void applyBusinessRulesOnCreate(User user) {
         if (!StringUtils.hasText(user.getName())) {
             user.setName(user.getLogin());
+        }
+    }
+
+    private void applyBusinessRulesOnUpdate(User user) {
+        if (!StringUtils.hasText(user.getName())) {
+            User existingUser = userStorage.findById(user.getId())
+                    .orElseThrow(() -> new NotFoundException("Пользователь с id=" + user.getId() + " не найден"));
+
+            if (StringUtils.hasText(existingUser.getName())) {
+                user.setName(existingUser.getName());
+            } else {
+                user.setName(existingUser.getLogin());
+            }
         }
     }
 }
